# GameTechA2

./: .gitignore  AIManager.cpp  AIManager.h  Assignment2.cpp  Assignment2.h  Ball.cpp  Ball.h  BaseApplication.cpp  BaseApplication.h  Bird.cpp  Bird.h  ContactSensorCallback.h  Controller.cpp  Controller.h  Door.cpp  Door.h  EnemyShooter.cpp  EnemyShooter.h  Explosion.cpp  Explosion.h  FinalReport.txt  Frog.cpp  Frog.h  GameManual.txt  GameObject.cpp  GameObject.h  GameSettings.h  Gun.cpp  Gun.h  Laser.cpp  Laser.h  Makefile  Makefile.am  Makefile.in  NetManager.cpp  Node.cpp  Node.h  OgreApp  OgreMotionState.cpp  OgreMotionState.h  (+30 more)
.deps/: OgreApp-BaseApplication.Po  OgreApp-TutorialApplication.Po  assignment2-AIManager.Po  assignment2-Ball.Po  assignment2-BaseApplication.Po  assignment2-ControlListener.Po  assignment2-GameObject.Po  assignment2-Overlay.Po  assignment2-Paddle.Po  assignment2-Player.Po  assignment2-PlayerCamera.Po  assignment2-PlayingField.Po  assignment2-Simulator.Po  assignment2-Sound.Po  assignment2-TutorialApplication.Po  assignment2-Wall.Po
Layouts/: controls.layout  controlsMenu.layout  deathMenu.layout  gameOver.layout  mainMenu.layout  multiplayer.layout  musicMenu.layout  newLevel.layout  pauseMenu.layout  settings.layout  winMenu.layout
MaterialScripts/: BallTexture.material  BirdTexture.material  CheckpointTexture.material  DoorTexture.material  ExtraLifeTexture.material  GrayTexture.material  MedpackTexture.material  PaddleTexture.material  ShooterTexture.material  ShotgunTexture.material  SuperJumpTexture.material  TransparentRed.material  WallTexture.material  WallTexture2.material  WallTexture2Inverse.material  WallTextureInverse.material  WallTextureInvisible.material  greenball.material
Particles/: Trail.particle
Textures/: FPSWallTexture.xcf  PaddleTexture.xcf  WallTexture.xcf
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
